@startuml GameLauncher

title GameLauncher

class Client{
    + main(): void
}
Client-->GameLauncher: calls getIstance()

class GameLauncher{
    - static instance : GameLauncher
    - GameLauncher()
    +static getIstance(): GameLauncher
    + launch() : void
}

class MainMenu{
    +MainMenu()
    +show() : void
}

GameLauncher-->MainMenu: launch
@enduml